# cloud_eval

./: .gitignore  .pre-commit-config.yaml  Dockerfile  QUICK_START.md  README.md  SERVICE_IMPLEMENTATION.md  create-sns-topic-1767552249.html  docker-compose.yml  entrypoint.sh  index.html  pyproject.toml  requirements.txt  s3-application-logs-1767552214.html  s3-application-logs-1767999314.html  s3-backups-bucket-1767552226.html  s3-simple-bucket-1767552187.html  s3-simple-bucket-1767999291.html  test_metadata.py  test_service.py
.github/: FUNDING.yml
.github/workflows/: precommit.yml  tests.yml
agents/: agents.yaml  openai_agent.py
docs/: create-sqs-queue-1767552246.html  s3-set-bucket-private-1767552243.html
frontend/: Dockerfile  package.json  server.js
frontend/public/: app.js  index.html  style.css
scripts/: render_report.js
src/cloud_eval/: __init__.py  agent_config.py  logging_config.py  reporting.py  runner.py  scenario.py  service.py  suite.py  summary.py  tools.py  verifier.py  verifiers_run.py
tasks/: __init__.py
tasks/aws/: __init__.py
tasks/aws/s3/: __init__.py
tasks/aws/s3/application_logs/: description.md  meta.json  verify.py
tasks/aws/s3/backups_bucket/: description.md  meta.json  verify.py
tasks/aws/s3/set_bucket_private/: description.md  meta.json  setup.py  verify.py
tasks/aws/s3/simple_bucket/: description.md  meta.json  verify.py
tasks/aws/sns/: __init__.py
tasks/aws/sns/create_topic/: description.md  meta.json  verify.py
tasks/aws/sqs/: __init__.py
tests/: test_metadata.py  test_service.py
(+5 files in other folders)
